--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -30,7 +30,7 @@
         <activity
             android:name=".SecondActivity"
             android:exported="true"
-            android:theme="@style/Theme.DashBoard"></activity>
+            android:theme="@style/Theme.DashBoard">
+        </activity>
     </application>
-
 </manifest>
